--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bull": "^3.16.0",
+    "bull": "^3.29.3",
     "chai-http": "^4.3.0",
-    "express": "^4.17.1",
-    "image-thumbnail": "^1.0.10",
+    "express": "^4.19.2",
+    "googleapis": "^144.0.0",
+    "image-thumbnail": "^1.0.17",
+    "mime-message": "^0.1.3",
     "mime-types": "^2.1.27",
-    "mongodb": "^3.5.9",
+    "mongodb": "^3.7.4",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
@@ -32,10 +34,11 @@
     "@babel/register": "^7.8.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jest": "^22.21.0",
+    "jest": "^29.7.0",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
